Fixing media query breakpoint center aligning and adding Twitter Link to footer symbol

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,7 +186,7 @@ body {
     transform: rotate(0);
   }
 
-  #title {
+  #title .container-fluid {
     text-align: center;
   }
 
